--- a/src/app/byengri/byengri/manage-statistics/manage-statistics.component.html
+++ b/src/app/byengri/byengri/manage-statistics/manage-statistics.component.html
@@ -1,11 +1,11 @@
 <div id="container">
     <div id="content">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+        <!-- <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
             <tr>
                 <td  class="mail_title">Statistics Management</td>
                 <td class="main_btn"> </td>
             </tr>
-        </table>
+        </table> -->
         <div class="box mg_b20 pd_20">
             <input type="date" [value]="startToday()" class="input_01" #start  style="width:180px;"/> ~ 
             <input type="date" [value]="endToday()" class="input_01"   #end   style="width:180px;"/> &nbsp;&nbsp;&nbsp;  
