--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -27,3 +27,38 @@ body {
 .disabled {
   color: gray !important;
 }
+
+.da-radio > div {
+  display: inline-block;
+  position: relative;
+  padding-left: 14px;
+  margin-right: 20px;
+}
+
+.da-radio input[type="radio"] {display: none;}
+.da-radio label::before{
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #828282;
+  background-color: #fff;
+  border-radius: 50%;
+  left: 0;
+  top: 2px;
+  cursor: pointer;
+}
+.da-radio input[type="radio"]:checked ~ label::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border: 0;
+  background-color: #2196f3;
+  border-radius: 50%;
+  left: 3px;
+  top: 5px;
+  cursor: pointer;
+}
