--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -39,7 +39,7 @@
 <div class="container py-5 vh-100 d-flex align-items-center justify-content-center">
     <div class="row w-100">
         <div class="col col-sm-9 col-md-7 col-lg-5 col-xl-4 mx-auto px-md-0">
-            <div class="card overflow-hidden mb-6">
+            <div class="card overflow-hidden">
                 <header class="bg-primary px-3 pb-3 pt-8">
                     <h1 class="text-lg text-white mb-0">NGS통합관리시스템 사용자 등록</h1>
                 </header>
@@ -75,7 +75,7 @@
                                 <option value="T">기사</option>
                             </select>
                         </div>
-                        <div class="text-right">
+                        <div class="text-center">
                             <button type="button" class="btn btn-primary" style="padding-top: 2px;" (click)="register()" >사용자등록</button>
                         </div>
                     </form>
