--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -8,7 +8,7 @@
               <h1 style="font-weight:bold; font-size: 18px;">NGS 고형암 검사 결과 분석 보고서</h1>
             </td>
             <td>
-              <ngx-barcode [bc-value]="patientInfo.pathology_num"  [bc-height]="40" [bc-display-value]="true"></ngx-barcode>
+              <ngx-barcode [bc-value]="pathologyNum"  [bc-height]="40" [bc-display-value]="true"></ngx-barcode>
             </td>
           </tr>
         </table>
