--- a/src/app/forms/form2/form2.component.scss
+++ b/src/app/forms/form2/form2.component.scss
@@ -100,6 +100,13 @@
    cursor: pointer;
  }
 
+ .tdbox {
+   display: flex;
+   align-items: flex-end;
+   margin-top: 20px;
+   width: 100%;
+ }
+
  /*
 .tdbox {
   width: 120px !important;
