--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -76,15 +76,15 @@
                                   
                                   <td class="table_result_line txt_c">{{dt.gene}}</td>
                                   <td class="txt_c">{{dt.type}}</td>
-                                  <td class="txt_c">{{dt.functional_impact}}</td>
+                                  <td class="txt_c">{{dt.functionalImpact}}</td>
                                   <td class="txt_c">{{dt.transcript}}</td>
-                                  <td class="txt_c">{{dt.exon}}</td>
-                                  <td class="txt_c">{{dt.nucleotide_change}}</td>
-                                  <td class="txt_c">{{dt.amino_acid_change}}</td>
+                                  <td class="txt_c">{{dt.exonIntro}}</td>
+                                  <td class="txt_c">{{dt.nucleotideChange}}</td>
+                                  <td class="txt_c">{{dt.aminoAcidChange}}</td>
                                   <td class="txt_c">{{dt.zygosity}}</td>
-                                  <td class="txt_c">{{dt.vaf}}</td>
+                                  <td class="txt_c">{{dt.vafPercent}}</td>
                                   <td class="txt_c">{{dt.references}}</td>
-                                  <td class="txt_c">{{dt.cosmic_id}}</td>
+                                  <td class="txt_c">{{dt.cosmicID}}</td>
                               </tr>
                               <!-- <tr>
                                   <td colspan="11" class="table_result_line">
