함수 추가 기능

--- a/src/app/home/components/detail-functions/detail-functions.component.html
+++ b/src/app/home/components/detail-functions/detail-functions.component.html
@@ -152,6 +152,7 @@
                         <td ><span class="bdnone" *ngIf="status.value === 'R'">{{list.condition}}</span>
                              <span class="bdnone" *ngIf="status.value === 'U'">
                                 <select id="condition{{list.seq}}">
+                                    <option value='' [selected]='list.condition'>=</option>
                                     <option value='<' [selected]='list.condition'><</option>
                                     <option value='<=' [selected]='list.condition'><=</option>
                                     <option value='>' [selected]='list.condition'>></option>
