--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -21,15 +21,17 @@
                     <thead>
                         <tr>
                             <th class="table_result_line">Leukemia associated fusion</th>
-                            <th>FLT3-ITD</th>
-                            <th>Chronmosomal analysis</th>
+
+                            <th *ngIf="type === 'AML'">FLT3-ITD</th>
+                            <th *ngIf="type === 'ALL'">IKZF1 deletion</th>
+                            <th>Chromosomal analysis</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="table_result_line"> {{profile.leukemia}} </td>
-                            <td>{{profile.flt3itd}}</td>
-                            <td>{{profile.chron}}</td>
+                            <td class="table_result_line txt_c"> {{profile.leukemia}} </td>
+                            <td class="txt_c">{{profile.flt3itd}}</td>
+                            <td class="txt_c">{{profile.chron}}</td>
                         </tr>
                     </tbody>
                 </table>
