--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -218,8 +218,9 @@
                   </colgroup>
                   <tbody>
                       <tr>
-                          <!-- <td>TARGET DISESSE:{{patientInfo.targetDisease}}</td> -->
-                          <td>TARGET DISEASE:Acute myeloid leukemia</td>
+                          <!-- <td>TARGET DISESSE:{{patientInfo.targetDisease}}</td>  <th *ngIf="reportType === 'AML'">FLT3-ITD</th>-->
+                          <td *ngIf="reportType === 'AML'">TARGET DISEASE:Acute myeloid leukemia</td>
+                          <td *ngIf="reportType === 'ALL'">TARGET DISEASE:Acute lymphoblastic leukemia</td>
                           <td> METHOD:*Massively parallel sequencing</td>
                           <!-- <td>METHODS: {{patientInfo.method}}</td> -->
                       </tr>
