디자인 변경

--- a/src/app/home/components/mainscreen/mainscreen.component.html
+++ b/src/app/home/components/mainscreen/mainscreen.component.html
@@ -4,12 +4,12 @@
   </app-tsvupload>
   <div id="container">
     <div id="content">
-      <!-- <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
-                <tr>
-                    <td  class="mail_title">Main Tilte_InHouse Benign</td>
-                    <td class="main_btn"> </td>
-                </tr>
-            </table> -->
+      <!--table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+          <tr>
+              <td  class="mail_title">Work List</td>
+              <td class="main_btn"> </td>
+          </tr>
+        </table-->
       <div class="box mg_b20 pd_20">
         <!-- <input type="text" class="input_01"  #testedID
                   (change)="getTestedID(testedID.value)"  placeholder="검체번호"/>&nbsp;&nbsp;
@@ -42,6 +42,21 @@
       <div class="box">
         <div class="box_100">
         <table border="0" cellpadding="0" cellspacing="0" class="table_list  fixed_header table_resul_x">
+          <colgroup>
+            <col width="40px">
+            <col width="80px">
+            <col width="80px">
+            <col width="50px">
+            <col width="50px">
+            <col width="80px">
+            <col width="80px">
+            <col width="90px">
+            <col width="*">
+            <col width="*">
+            <col width="90px">
+            <col width="120px">
+            <col width="95px">
+          </colgroup>
           <thead>
             <tr>
               <th>No.</th>
