--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -28,15 +28,20 @@ body {
   color: gray !important;
 }
 
-.da-radio > div {
+.da-radio > label {
   display: inline-block;
   position: relative;
   padding-left: 14px;
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 .da-radio input[type="radio"] {display: none;}
-.da-radio label::before{
+.da-radio span {
+  color: #FFF;
+  font-weight: bold;
+  font-size: 20px;
+}
+.da-radio span::before{
   content: '';
   display: inline-block;
   position: absolute;
@@ -49,7 +54,7 @@ body {
   top: 2px;
   cursor: pointer;
 }
-.da-radio input[type="radio"]:checked ~ label::after {
+.da-radio input[type="radio"]:checked ~ span::after {
   content: '';
   display: inline-block;
   position: absolute;
