--- a/src/app/home/components/mainscreen/mainscreen.component.scss
+++ b/src/app/home/components/mainscreen/mainscreen.component.scss
@@ -11,7 +11,7 @@ table {
 .fixed_header th {
   position: sticky;
   top: 0;
-  background-color: #fff;
+  // background-color: #fff;
 }
 
 /*** /테이블 헤더 고정 ***/
@@ -56,5 +56,15 @@ table {
 }
 
 .select_001 {
-  padding: .5715rem .8571rem !important;
+  padding: .6212rem .8571rem !important;
+  background-color: #f5f5f5;
+  background-clip: padding-box;
+  border: 1px solid #dcdcdc;
+}
+
+label {
+  font-size: 12px;
+  font-weight: bold;
+  color: #666666;
+  display: inline-block;
 }
