--- a/src/app/home/components/manage-functions/manage-functions.component.scss
+++ b/src/app/home/components/manage-functions/manage-functions.component.scss
@@ -119,8 +119,8 @@ caption {
       margin-top: 0;
   }
   .input_01 {
-     height: 30px;
      width: 300px;
-     margin : 10px;
+    //  height: 30px;
+    //  margin : 10px;
   }
   
