--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -17,8 +17,11 @@
   position: relative;
   zoom: 1;
   width: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   background: #f5f5f5 url(../images/bg_top.png) repeat-x;
+  box-sizing: border-box;
+  padding-bottom: 30px;
 }
 
 #result {
@@ -325,11 +328,12 @@
 }
 
 .mail_title {
-  background: url(../images/title_bg.png) no-repeat 0 20px;
+  background: url(../images/title_bg.png) no-repeat 0 8px;
   font-size: 20px;
   color: #000000;
   padding-left: 20px;
-  height: 55px;
+  height: 25px;
+  padding-top: 3px;
 }
 
 .box {
@@ -365,7 +369,7 @@
   color: #212121;
   background-color: #f5f5f5;
   background-clip: padding-box;
-  border: 1px solid #9acffa;
+  border: 1px solid #dcdcdc;
   border-radius: .1429rem;
   box-shadow: none;
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
@@ -409,11 +413,16 @@
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  /* padding: .375rem 1.1428rem; */
-  padding: .375rem 0.42rem;
+  /* padding: .375rem 0.42rem; */
+  padding: .2211rem 0.42rem;
   line-height: 1.5;
   border-radius: .1429rem;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  margin: 0;
+}
+
+.btn.search {
+  box-sizing: content-box;
 }
 
 .btn_01 {
@@ -466,26 +475,33 @@
   width: 100%;
   margin-bottom: 8px;
   color: #424242;
-  padding: 10px 0;
+  padding: 0 0 10px 0;
+  min-width: 1080px;
 }
 
 .table_list th {
   font-size: 12px;
   color: #666666;
-  padding: 10px;
+  padding: 10px; 
+  background-color: #fafafa;
+  border: 1px solid #e0e0e0;
+  border-left: 0;
+  overflow: hidden;
 }
 
 .table_list td {
   font-size: 13px;
   color: #666666;
-  border-top: #e0e0e0 solid 1px;
+  border-bottom: #e0e0e0 solid 1px;
+  border-right: 1px solid #e0e0e0;
   padding: 10px;
   line-height: 30px;
+  overflow: hidden;
 }
 
-.table_bg {
+/* .table_bg {
   background-color: #fafafa;
-}
+} */
 
 .txt_01 {
   color: #2196f3 !important;
@@ -650,7 +666,7 @@
   width: 100%;
   height: 500px;
   padding: 0px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .box_80 {
